--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -21,7 +21,7 @@
         align-items: center;
         display: flex;
         margin: auto;
-        // padding-left: -10px;
+        padding: 15px 0;
     }
 }
 
@@ -102,7 +102,7 @@
     align-items: center;
     justify-content: space-between;
 
-    span {
+    .dish-price {
         margin-right: 10px;
         margin-top: 40px;
 
@@ -126,9 +126,6 @@
         white-space: pre-line;
         text-overflow: ellipsis;
         padding-bottom: 14px;
-        // &:hover{
-        //     width: 90%;
-        // }
 
         font: {
             family: $text-font;
@@ -158,6 +155,91 @@
 
 }
 
+@mixin visible-dish-wrap {
+    width: 90%;
+    background-color: #fff;
+    border-radius: 20px;
+    margin: 20px;
+    overflow: hidden;
+    box-shadow: 0px 7px 10px 1px rgb(0 0 0 / 15%);
+
+    &:hover {
+        cursor: pointer;
+        transform: rotate(360deg);
+    }
+}
+
+@mixin dish-wrap {
+    width: 134%;
+    display: flex;
+    align-items: center;
+    transition: width 1s ease-out 100ms;
+
+    >.check {
+        .fa-check-circle {
+            @include check-icon;
+            transition: transform 1s ease-out 10ms;
+
+        }
+    }
+
+    &:hover {
+        width: 103%;
+
+        .check {
+            padding-right: 10px;
+
+            .fa-check-circle {
+                @include check-icon;
+                transform: rotate(360deg);
+            }
+        }
+    }
+
+
+}
+
+
+@mixin dish-info {
+    display: block;
+    // width: 80%;
+    padding-left: 15px;
+    // margin-right: 55px;
+    padding-right: 25px;
+
+    &:hover {
+        >h3 {
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+        }
+    }
+
+    >p {
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+    }
+}
+
+
+@mixin check {
+    background-color: #99E2D0;
+    border-radius: 0 20px 20px 0;
+    margin-left: 10px;
+    width: 82px;
+}
+
+@mixin check-icon {
+    font-size: 25px;
+    color: #fff;
+    background-color: $third-color;
+    border-radius: 20px;
+    position: relative;
+    margin: 28px 32px;
+}
+
+
 @mixin btn-order {
     display: block;
     width: 250px;
@@ -185,10 +267,13 @@
     padding: 0 0 45px 0;
 
     h5 {
+        font: {
+            family: Shrikhand;
+            size: 35px;
+            weight: 400;
+        }
+
         color: #fff;
-        font-family: Shrikhand;
-        font-size: 35px;
-        font-weight: 400;
         padding: 45px 0 0 40px;
     }
 
@@ -229,10 +314,13 @@
     padding: 0 0 45px 0;
 
     h5 {
+        font: {
+            family: $main-font;
+            size: 22px;
+            weight: 400;
+        }
+
         color: #fff;
-        font-family: $main-font;
-        font-size: 22px;
-        font-weight: 400;
         display: flex;
         padding: 40px 0 25px 30px;
     }
